setting auth
